# fusao

./: README.md  docker-compose.yml
cliente/: .env  .env.development  Dockerfile  README.md  package-lock.json  package.json
cliente/public/: data.json  name.json
cliente/public/collections/: analysis.json  nubank_novo.json
cliente/src/: App.vue  config.js
cliente/src/components/: Loading.vue  Panel.vue  RandomChart.vue  SnackBar.vue
cliente/src/components/charts/: BarChart.vue  BubbleChart.vue  DoughnutChart.vue  HorizontalBarChart.vue  LineChart.vue  MapChart.vue  PieChart.vue  PolarAreaChart.vue  RadarChart.vue  ScatterChart.vue
cliente/src/plugins/: http.js  vuetify.js
cliente/src/router/: beforeEach.js  index.js
cliente/src/services/: index.js
cliente/src/store/: action.js  index.js
cliente/src/utils/: index.js
cliente/src/views/: Auth.vue  BarChartEx.vue  Empresa.vue  Fusao.vue  Home.vue  LineChartEx.vue  Login.vue
server/: .env  .flaskenv  .gitignore  Dockerfile  ReclameAqui.py  config.py  consumidor.py  fusionanalysis.py  pyproject.toml  reclameaqui.py  requirements-dev.txt  requirements.txt  server.py  settings.toml  setup.py
server/fusaoapi/: __init__.py  app.py  errors.py  models.py  resources.py  settings.py
server/fusaoapi/blueprints/: __init__.py  routes.py
server/fusaoapi/crawlers/: config.json  consumidor.py  reclameaqui.py
server/fusaoapi/ext/: auth.py  blueprints.py  database.py
