[tool.poetry]
name = "fusao-server"
version = "0.1.0"
description = ""
authors = ["Júnior Lima <juniorlima.e@gmail.com>","Rodrigo Frazão Maia <rodrigoframa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1.2"
bs4 = "^0.0.1"
selenium = "^3.141.0"
flask_pymongo = "^2.3.0"
python-dotenv = "^0.13.0"
flask_restful = "^0.3.8"
flask-mongoengine = "^0.9.5"
flask-bcrypt = "^0.7.1"
flask-jwt-extended = "^3.24.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
